tudo menos tecnico

--- a/humanas.html
+++ b/humanas.html
@@ -100,6 +100,68 @@
         </div>
     </div>
 
+    <div class="container-fluid justify-content-center" id="atividades">
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFgFCgzSFs/DuUESr_XD7N8rKqn4sTdtg/edit?utm_content=DAFgFCgzSFs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/gazetapravda.png" class="card-img-top"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Meios de Comunicação da Virada do Século XX</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Produção de um jornal de época do início do século XX.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFiddGBMB4/x08gwUEJj2b_8RMaXaXIjA/edit?utm_content=DAFiddGBMB4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/comeandsee.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Apresentação - Filmes sobre totalitarismo</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                        <p class="card-text">Apresentação sobre um filme lidando com o tema de governos totalitários.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFnV2wNR7Q/4vQBm4vrbSfzn2jQJaRYzw/edit?utm_content=DAFnV2wNR7Q&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/vargas.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Infográfico - Era Vargas</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                        <p class="card-text">Projeto de busca de dados e comparação da Era Vargas com a República Velha.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://docs.google.com/document/d/1IBiQyG-RhK0oFki2-MkBKwWoMnGtQIJcm9ouMpdyB-0/edit?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/ic.png" class="card-img-top"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Iniciação Cienífica de Humanas</h5>
+                            <h6>Atividade orientada</h6>
+                            <p class="card-text">Produção de um artigo científico ao longo do ano tomando como temática os efeitos da urbanização de Florianópolis nos hábitos alimentares da população.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
