--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             </div>
             <div class="modal-body">
                 <p id="texto_tecnico">
-                    Apesar de ser uma versão básica que planejo alterar no terceiro trimestre para melhor refletir as
-                    habilidades desenvolvidas no terceiro ano, este portfólio ainda é um produto de habilidades
+                    Este portfólio é um produto de habilidades
                     desenvolvidas na grade técnica. O HTML é utilizado para a estruturação básica de elementos, o CSS
                     para a estilização e o framework Bootstrap para a fácil implementação de certas funcionalidades.
                     Após a construção do site, o Github é utilizado para o controle de versões e o deployment público
