--- a/linguagens.html
+++ b/linguagens.html
@@ -95,6 +95,69 @@
         </div>
     </div>
 
+    <div class="container-fluid justify-content-center" id="atividades">
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://docs.google.com/document/d/12RazgLaUOQGGskapFzvIJ6zMjdipMGn4egKknw3DVQ4/edit"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/felicidade.jpg" class="card-img-top"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Resenha Crítica - Felicidade Clandestina e Felicidade: Modos de Usar</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Resenha crítica sobre dois fragmentos de texto extraídos de Felicidade Clandestina, de Clarice Lispector e Felicidade: Modos de Usar de Leandro Karnal.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFmZruoYr0/hPvzdBitP61qO28xwcFxRg/edit?utm_content=DAFmZruoYr0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/modernart.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Sala de Aula Invertida - Modernismo</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                        <p class="card-text">Apresentação utilizada na atividade de sala de aula invertida sobre o movimento modernista no Brasil.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFr7g6H1dU/rUHk56oaMZAia1MH6sgv1A/edit?utm_content=DAFr7g6H1dU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/livrosufsc.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Revista Literária - Livros UFSC 2024</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                        <p class="card-text">Projeto de revisão das obras do edital para o vestibular UFSC de 2024</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFnNCAviRA/TLm_pFillnmwtJyafCOo1w/edit?utm_content=DAFnNCAviRA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/perfectschool.jpg" class="card-img-top"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Perfect School</h5>
+                            <h6>Projeto de aprendizagem</h6>
+                            <p class="card-text">Reflexão em língua inglesa sobre a aparência de uma escola perfeita, abordando temática social.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
