--- a/matematica.html
+++ b/matematica.html
@@ -92,6 +92,39 @@
         </div>
     </div>
 
+    <div class="container-fluid justify-content-center" id="atividades">
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/file/d/1rsO4S_uhpK7B0a2I-J-fNxxiIb9gvO16/view?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/entrevista.jpg" class="card-img-top"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Entrevista - Matemática no Mundo Profissional</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Entrevista conduzida com um artista sobre a matemática aplicada no dia a dia de sua profissão.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://docs.google.com/document/d/1yjGc4KqMbS9WLJ1s9s-7j1H1BS2AO7nlSZKhpyLGRlE/edit?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/21_(2008_film).jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Atividade - Quebrando a Banca</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                        <p class="card-text">Atividade sobre o filme "Quebrando a Banca" para o assunto de probabilidade.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
