--- a/tecnico.html
+++ b/tecnico.html
@@ -94,6 +94,94 @@
         </div>
     </div>
 
+    <div class="container-fluid justify-content-center" id="atividades">
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/file/d/1VqOdlrfuBPKoHlDg6DMaC9ZRByxk32nz/view?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/uml.jpg" class="card-img-top"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Introdução a UML</h5>
+                            <h6>Projeto de autoria</h6>
+                            <p class="card-text">Relatório técnico de pesquisa sobre diagramas de UML</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://docs.google.com/document/d/1f9R-KxiGQRP-pfipvixwi6xItkukBYlclWb_IXg3Pow/edit?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/cs_apis.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Estudo de Caso - APIs</h5>
+                            <h6>Projeto de resolução de problemas</h6>
+                        <p class="card-text">Estudo de caso sobre APIs de clima utilizando o protocolo HTTP/HTTPS.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://docs.google.com/document/d/1Flc_TLdkAJGsr6vkXypPU8GQMnmuZEN6tKndsy90w3k/edit?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/tago.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Tutorial Tago.io</h5>
+                            <h6>Projeto de autoria</h6>
+                        <p class="card-text">Documento de tutorial para a utilização da plataforma Tago.io junto com mqtt.fx</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://docs.google.com/document/d/1h3uARgfNY9TUHfgZ5C2X2on4BiKHQnUjd1AaixHQn_o/edit?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/domain.png" class="card-img-top"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Modelagem de Sistema</h5>
+                            <h6>Projeto de resolução de problemas</h6>
+                            <p class="card-text">Modelo de classes de um sistema baseado em especificações extraídas de uma conversa entre cliente e expert</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://docs.google.com/document/d/1U-PPO33M-Arh7z5lk1DIrAEAfuy5eSuzc_1sc2yeokU/edit?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/procedures.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Exercícios Procedures</h5>
+                            <h6>Projeto de diagnóstico</h6>
+                        <p class="card-text">Lista de exercícios sobre procedures em SQL.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://github.com/ptorques/reactnativepratica/tree/main/2023-10-11/github_api"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/githubapp.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Consumo de rota Github - Programação de Aplicativos</h5>
+                            <h6>Projeto de aprendizagem</h6>
+                        <p class="card-text">Criação de um sistema de consulta de informações sobre repositórios no Github</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
