--- a/natureza.html
+++ b/natureza.html
@@ -72,7 +72,8 @@
                 </ul>
                 <li><a href="https://sites.google.com/estudante.sesisenai.org.br/portflio-pedro-torques/início?authuser=0"
                         target="_blank" rel="noopener noreferrer">Portfólio de 2021</a></li>
-                        <li><a href="https://pedrotorques.netlify.app" target="_blank" rel="noopener noreferrer">Portfólio de 2022</a></li>
+                <li><a href="https://pedrotorques.netlify.app" target="_blank" rel="noopener noreferrer">Portfólio de
+                        2022</a></li>
             </ul>
         </div>
     </div>
@@ -94,6 +95,83 @@
             </div>
         </div>
     </div>
+
+    <div class="container-fluid justify-content-center" id="atividades">
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFdXg1gCFc/PtuJ1hnFKGZbttp0BJ21Fw/edit?utm_content=DAFdXg1gCFc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/orsted.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Infográfico - Magnetismo</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Infográfico em formato de linha do tempo sobre magnetismo.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFe4bj06B0/SI2M3TvC2zpVrkL6Bx2gkQ/edit?utm_content=DAFe4bj06B0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/eletroima.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Prática - Eletroímã</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Apresentação para organizar os registros da prática de fabricação de um
+                                eletroímã no Laboratório Maker.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFsdpOi8CE/2IgKDQY0YxJjQ7g7tbj3Sg/edit?utm_content=DAFsdpOi8CE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/plastico.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Cartaz sobre consumo de plástico</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Projeto de produção de um cartaz conscientizador sobre o uso de copos
+                                plásticos</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col">
+            <div class="card bg-transparent border-light cartao_atividade">
+                <a href="https://docs.google.com/document/d/1Q-hK3P1jhCqiIfOPxFewyra15VjSxrgYLR3p9d1id1Q/edit?usp=sharing"
+                    target="_blank" rel="noopener noreferrer">
+                    <img src="./assets/images/thumbs/passe.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Revisão Passe - Física</h5>
+                        <h6>Projeto de diagnóstico</h6>
+                        <p class="card-text">Lista de exercícios de física para revisão da prova diagnóstica Passe.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card bg-transparent border-light cartao_atividade">
+                <a href="https://www.canva.com/design/DAFtrsrOrfM/ywXX6NwsOMyRNGSuWsH8fw/edit?utm_content=DAFtrsrOrfM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                    target="_blank" rel="noopener noreferrer">
+                    <img src="./assets/images/thumbs/revistaplast.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Revista - Plástico</h5>
+                        <h6>Projeto de aprendizagem</h6>
+                        <p class="card-text">Projeto de redação de uma revista com tema ecológico.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
 
     <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
