--- a/tecnico.html
+++ b/tecnico.html
@@ -71,7 +71,8 @@
                 </ul>
                 <li><a href="https://sites.google.com/estudante.sesisenai.org.br/portflio-pedro-torques/início?authuser=0"
                         target="_blank" rel="noopener noreferrer">Portfólio de 2021</a></li>
-                <li><a href="https://pedrotorques.netlify.app" target="_blank" rel="noopener noreferrer">Portfólio de 2022</a></li>
+                <li><a href="https://pedrotorques.netlify.app" target="_blank" rel="noopener noreferrer">Portfólio de
+                        2022</a></li>
             </ul>
         </div>
     </div>
@@ -101,8 +102,7 @@
                 <div class="card bg-transparent border-light cartao_atividade">
                     <a href="https://drive.google.com/file/d/1VqOdlrfuBPKoHlDg6DMaC9ZRByxk32nz/view?usp=sharing"
                         target="_blank" rel="noopener noreferrer">
-                        <img src="./assets/images/thumbs/uml.jpg" class="card-img-top"
-                            alt="...">
+                        <img src="./assets/images/thumbs/uml.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Introdução a UML</h5>
                             <h6>Projeto de autoria</h6>
@@ -119,7 +119,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Estudo de Caso - APIs</h5>
                             <h6>Projeto de resolução de problemas</h6>
-                        <p class="card-text">Estudo de caso sobre APIs de clima utilizando o protocolo HTTP/HTTPS.</p>
+                            <p class="card-text">Estudo de caso sobre APIs de clima utilizando o protocolo HTTP/HTTPS.
+                            </p>
                         </div>
                     </a>
                 </div>
@@ -132,23 +133,26 @@
                         <div class="card-body">
                             <h5 class="card-title">Tutorial Tago.io</h5>
                             <h6>Projeto de autoria</h6>
-                        <p class="card-text">Documento de tutorial para a utilização da plataforma Tago.io junto com mqtt.fx</p>
+                            <p class="card-text">Documento de tutorial para a utilização da plataforma Tago.io junto com
+                                mqtt.fx</p>
                         </div>
                     </a>
                 </div>
             </div>
         </div>
+
+
         <div class="row justify-content-center">
             <div class="col">
                 <div class="card bg-transparent border-light cartao_atividade">
                     <a href="https://docs.google.com/document/d/1h3uARgfNY9TUHfgZ5C2X2on4BiKHQnUjd1AaixHQn_o/edit?usp=sharing"
                         target="_blank" rel="noopener noreferrer">
-                        <img src="./assets/images/thumbs/domain.png" class="card-img-top"
-                            alt="...">
+                        <img src="./assets/images/thumbs/domain.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Modelagem de Sistema</h5>
                             <h6>Projeto de resolução de problemas</h6>
-                            <p class="card-text">Modelo de classes de um sistema baseado em especificações extraídas de uma conversa entre cliente e expert</p>
+                            <p class="card-text">Modelo de classes de um sistema baseado em especificações extraídas de
+                                uma conversa entre cliente e expert</p>
                         </div>
                     </a>
                 </div>
@@ -161,7 +165,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Exercícios Procedures</h5>
                             <h6>Projeto de diagnóstico</h6>
-                        <p class="card-text">Lista de exercícios sobre procedures em SQL.</p>
+                            <p class="card-text">Lista de exercícios sobre procedures em SQL.</p>
                         </div>
                     </a>
                 </div>
@@ -174,7 +178,213 @@
                         <div class="card-body">
                             <h5 class="card-title">Consumo de rota Github - Programação de Aplicativos</h5>
                             <h6>Projeto de aprendizagem</h6>
-                        <p class="card-text">Criação de um sistema de consulta de informações sobre repositórios no Github</p>
+                            <p class="card-text">Criação de um sistema de consulta de informações sobre repositórios no
+                                Github</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFrclEyLK8/vaaxyqQLN-zQkXZoTBAdqQ/edit?utm_content=DAFrclEyLK8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/scrum.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Processo de desenvolvimento de software</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Apresentação sobre método scrum para desenvolvimento de software</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/file/d/14jsdnafR8y9oYFi1RARncmCRuTg_x31k/view?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/casodeuso.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">SA - Diagrama de Caso de Uso</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Modelagem de diagrama de caso de uso UML para a SA.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/drive/folders/1jWOH5MO07JeBh_GO60--FDPByYzA_zU1?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/sa_web.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">SA - Diagrama de Classes</h5>
+                            <h6>Projeto requisitadao pelo docente</h6>
+                            <p class="card-text">Modelagem de diagrama de classes UML para a SA.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/file/d/1uxvgnW6gjWZbbkEtswq-8mJpl-VWVwlE/view?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/teoriapoo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Teoria - POO</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Relatório de pesquisa sobre conceitos de programação orientada a
+                                objetos</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.figma.com/file/CxbaKb4xAICot1RxGC9qbJ/Sa?type=design&node-id=0-1&mode=design"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/figma.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">SA - Telas no Figma</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Prototipagem das telas do app no Figma.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://github.com/Senai-SC-CTAI/SA_2023_3A_S_Gate/tree/main/app/src/screens"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/telasapp.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">SA - Telas do App</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Código das telas do aplicativo da SA</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://docs.google.com/document/d/1RO8aWrxHbEojl1Zc_soYISVOcjsa-jbnXWdVAtGD58Q/edit?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/virtualizacao.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Pesquisa Virtualização</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Pesquisa sobre softwares de virtualização</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/file/d/1O1UIOuThjMxTaKz0i75f1B0x5G3ecZJP/view?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/cluster.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Atividade prática de implantação</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Print de criação de um cluster proxmox para atividade prática</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/file/d/1hJKk98vUwezLHP4-b84VwiUvz3GfrflU/view?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/apigithub.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Atividade prática - API Github</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">HTML com lógica básica para requisição da API pública do Github</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://www.canva.com/design/DAFnrGroKkw/2jpQXbOZQ8R3lvLzCnfywQ/edit?utm_content=DAFnrGroKkw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/tech.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Atividade APIs</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Pesquisa e apresentação sobre funcionamento de APIs com os métodos mais
+                                comuns</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/file/d/1K9xE7naXgPQ6PACMlhc6F7CskIWqGoex/view?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/bibliotecafisica.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Modelo físico</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Prints de queries em um modelo físico de banco de dados baseado em uma
+                                biblioteca</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/drive/folders/13K89PLuCZhAGNvdVzfuLO6QPi_rwApkv?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/retomadadb.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Retomada Banco de Dados</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Atividade de criação completa de um banco de dados desde a modelagem
+                                conceitual até o modelo físico</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/drive/folders/1sHHvavL3EU78ZCd-8GevESsffjgJJ54N?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/testes.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Teste de usabilidade</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Elaboração de documentos de teste para um sistema propositalmente defeituoso</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://github.com/Senai-SC-CTAI/SA_2023_3A_S_Gate/"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/app.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">SA - App</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Código do aplicativo da SA</p>
                         </div>
                     </a>
                 </div>
