--- a/tecnico.html
+++ b/tecnico.html
@@ -389,6 +389,19 @@
                     </a>
                 </div>
             </div>
+            <div class="col">
+                <div class="card bg-transparent border-light cartao_atividade">
+                    <a href="https://drive.google.com/file/d/1cq-Zqk3Iw5Nv6-pPt197MJ1M1MJ1-DRF/view?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/images/thumbs/atividade.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">SA - Diagrama de Atividade</h5>
+                            <h6>Projeto requisitado pelo docente</h6>
+                            <p class="card-text">Diagrama UML de atividade do sistema da SA</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
